# StudyAi

./: README.md
match/: CMakeLists.txt  matchproject.cpp
src/matchproject/: CMakeLists.txt  package.xml
src/matchproject/src/: matchproject.cpp
src/tracker01/: CMakeLists.txt  package.xml
src/tracker01/include/tracker01/: MultiTemplateTracker.hpp  SingleTemplateTracker.hpp  datasets.h  tracker.hpp
src/tracker01/launch/: camera.launch
src/tracker01/src/: videoCapture.cpp
